Added information to gitignored

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ src/__pycache__/__init__.cpython-36.pyc
 src/__pycache__/BagsOfWords.cpython-36.pyc
 src/__pycache__/vector_matrix_operater.cpython-36.pyc
 src/__pycache__/encoding_decoding_operater.cpython-36.pyc
+.vscode/launch.json
