--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ src/__pycache__/BagsOfWords.cpython-36.pyc
 src/__pycache__/encoding_decoding_operater.cpython-36.pyc
 src/__pycache__/vector_matrix_operater.cpython-36.pyc
 .vscode/launch.json
+src/classes/__pycache__/__init__.cpython-36.pyc
+src/classes/__pycache__/BagsOfWords.cpython-36.pyc
+src/operaters/__pycache__/vector_matrix_operater.cpython-36.pyc
+src/operaters/__pycache__/__init__.cpython-36.pyc
