--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ src/classes/__pycache__/__init__.cpython-36.pyc
 src/classes/__pycache__/BagsOfWords.cpython-36.pyc
 src/operaters/__pycache__/__init__.cpython-36.pyc
 src/operaters/__pycache__/vector_matrix_operater.cpython-36.pyc
+src/seq2seq/__pycache__/Seq2SeqEncoder.cpython-36.pyc
