Added infomation to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ src/classes/__pycache__/BagsOfWords.cpython-36.pyc
 src/operaters/__pycache__/__init__.cpython-36.pyc
 src/operaters/__pycache__/vector_matrix_operater.cpython-36.pyc
 src/seq2seq/__pycache__/Seq2SeqEncoder.cpython-36.pyc
+src/seq2seq/__pycache__/__init__.cpython-36.pyc
+src/seq2seq/__pycache__/Attentions.cpython-36.pyc
