Added more gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ src/seq2seq/__pycache__/Seq2SeqEncoder.cpython-36.pyc
 src/seq2seq/__pycache__/__init__.cpython-36.pyc
 src/seq2seq/__pycache__/Attentions.cpython-36.pyc
 src/seq2seq/__pycache__/Seq2SeqDecoder.cpython-36.pyc
+src/operaters/__pycache__/loss_function_operater.cpython-36.pyc
