--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ src/seq2seq/__pycache__/__init__.cpython-36.pyc
 src/seq2seq/__pycache__/Attentions.cpython-36.pyc
 src/seq2seq/__pycache__/Seq2SeqDecoder.cpython-36.pyc
 src/operaters/__pycache__/loss_function_operater.cpython-36.pyc
+src/classes/__pycache__/PreProcessingDataModel.cpython-36.pyc
+src/preparation/__pycache__/__init__.cpython-36.pyc
+src/preparation/__pycache__/reader_json_file.cpython-36.pyc
