--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@ src/operaters/__pycache__/loss_function_operater.cpython-36.pyc
 src/classes/__pycache__/PreProcessingDataModel.cpython-36.pyc
 src/preparation/__pycache__/__init__.cpython-36.pyc
 src/preparation/__pycache__/reader_json_file.cpython-36.pyc
+src/modeling/__pycache__/__init__.cpython-36.pyc
+src/modeling/__pycache__/loss_function.cpython-36.pyc
+src/modeling/__pycache__/train_iteration.cpython-36.pyc
+src/modeling/__pycache__/train.cpython-36.pyc
+src/processing/__pycache__/__init__.cpython-36.pyc
+src/processing/__pycache__/transform_data.cpython-36.pyc
+src/processing/__pycache__/vector_matrix.cpython-36.pyc
+src/processing/seq2seq/__pycache__/__init__.cpython-36.pyc
+src/processing/seq2seq/__pycache__/Attentions.cpython-36.pyc
+src/processing/seq2seq/__pycache__/Seq2SeqDecoder.cpython-36.pyc
+src/processing/seq2seq/__pycache__/Seq2SeqEncoder.cpython-36.pyc
