Added more gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ src/processing/seq2seq/__pycache__/__init__.cpython-36.pyc
 src/processing/seq2seq/__pycache__/Attentions.cpython-36.pyc
 src/processing/seq2seq/__pycache__/Seq2SeqDecoder.cpython-36.pyc
 src/processing/seq2seq/__pycache__/Seq2SeqEncoder.cpython-36.pyc
+src/modeling/seq2seq/__pycache__/Attentions.cpython-36.pyc
+src/modeling/seq2seq/__pycache__/__init__.cpython-36.pyc
+src/modeling/seq2seq/__pycache__/Seq2SeqDecoder.cpython-36.pyc
+src/modeling/seq2seq/__pycache__/Seq2SeqEncoder.cpython-36.pyc
