Added .csv file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ src/modeling/seq2seq/__pycache__/__init__.cpython-36.pyc
 src/modeling/seq2seq/__pycache__/Attentions.cpython-36.pyc
 src/modeling/seq2seq/__pycache__/Seq2SeqDecoder.cpython-36.pyc
 src/modeling/seq2seq/__pycache__/Seq2SeqEncoder.cpython-36.pyc
+data/raw/data_with_tag.csv
