--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy==1.17.0
-tensorflow==1.12.2
-pythainlp==2.0.6
-pandas==0.25.0
-keras==2.2.5
-wheel==0.33.6
+numpy>=1.17.0
+tensorflow>=1.12.2
+pythainlp>=2.0.6
+pandas>=0.25.0
+keras>=2.2.5
+wheel>=0.33.6
+flask>=1.1.1
+flask-restful>=0.3.7
+flask-cors>=3.0.8
